src/styles/index.css
.header {
  display: flex;
  justify-content: space-between;
  font-family: Open Sans, sans-serif;
}

.header span {
  padding: 1em;
}

label {
  padding-right: .5em;
}

#beltCount {
  width: 250px;
  max-width: 100%;
}

